--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~7.1.0",
     "bootstrap": "^4.4.1",
     "core-js": "^2.5.4",
+    "jquery": "^3.4.1",
     "node-sass": "^4.13.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
