added files appspec-tsconfig, fixed errors raised by shiva

--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,9 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/.htaccess"
+              "src/.htaccess",
+              "src/appspec.yml",
+              "src/scriptsCICD"
             ],
             "styles": [
               "src/styles.scss"
